--- a/page58.html
+++ b/page58.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-j0" data-rv-view="1563">
+  <section id="menu-j0" data-rv-view="1473">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-j2" data-rv-view="1567" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-j2" data-rv-view="1477" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<div id="custom-html-j3" custom-code="true" data-rv-view="1570"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-j3" custom-code="true" data-rv-view="1480"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -392,7 +392,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-j1" data-rv-view="1565" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-j1" data-rv-view="1475" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
