--- a/page30.html
+++ b/page30.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-99" data-rv-view="713">
+  <section id="menu-99" data-rv-view="623">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free site creation software</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-9b" data-rv-view="717" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-9b" data-rv-view="627" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9c" data-rv-view="720" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9c" data-rv-view="630" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -82,7 +82,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-9d" data-rv-view="722" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-9d" data-rv-view="632" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -99,7 +99,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9e" data-rv-view="724" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9e" data-rv-view="634" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -112,7 +112,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-9f" data-rv-view="726" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-9f" data-rv-view="636" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -123,7 +123,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9g" data-rv-view="728" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9g" data-rv-view="638" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -133,7 +133,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-9h" data-rv-view="730" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-9h" data-rv-view="640" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -150,7 +150,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9i" data-rv-view="732" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9i" data-rv-view="642" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -160,7 +160,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-9j" data-rv-view="734" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-9j" data-rv-view="644" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -177,7 +177,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9k" data-rv-view="736" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9k" data-rv-view="646" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -187,7 +187,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-9a" data-rv-view="715" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-9a" data-rv-view="625" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
