--- a/page35.html
+++ b/page35.html
@@ -24,9 +24,9 @@
   
 </head>
 <body>
-  <div id="menu-bq" custom-code="true" data-rv-view="817"></div>
+  <div id="menu-bq" custom-code="true" data-rv-view="727"></div>
 
-<section class="mbr-section form1 mbr-after-navbar" id="form1-fe" data-rv-view="820" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section form1 mbr-after-navbar" id="form1-fe" data-rv-view="730" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -51,7 +51,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="3GEBoJNQTRX+wejg/6ZBOy/iSav/iCOEizY+RxFQk4TEP91mytJQlwbZ12DcR1xsUOo0XafBg5IhjGMDutJXYlsJ1VSA9+tN5Dhsksjz4lzOL/8uiYiRn4XKkQhNRIzP" data-form-email="true">
+                        <input type="hidden" value="l1rflq/RXSsdZoKfhb7bBlQeGucv/okh7K6y6Hets3g3mGgPt46rdfFpdKVdjqsQYXZvz0ao7fTsaCMItT5ZhsiYM+yApgSpY7wmAGJZlUj38bogJyUwyGYokA2iyJko" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -92,7 +92,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="818" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="728" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
