--- a/page70.html
+++ b/page70.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-mp" data-rv-view="1951">
+  <section id="menu-mp" data-rv-view="1922">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-mr" data-rv-view="1953" style="background-image: url(assets/images/mbr-2-1920x1080.jpg);">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-mr" data-rv-view="1926" style="background-image: url(assets/images/mbr-2-1920x1080.jpg);">
 
     
 
@@ -79,7 +79,7 @@
 
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-ms" data-rv-view="1956" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-ms" data-rv-view="1929" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Gallery -->
     <div class="mbr-section__container mbr-gallery-layout-article">
             <div>
@@ -91,7 +91,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-mq" data-rv-view="1952" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-mq" data-rv-view="1924" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
