--- a/Miscellaneous.html
+++ b/Miscellaneous.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-d" data-rv-view="613">
+  <section id="menu-d" data-rv-view="128">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="617" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-15" data-rv-view="132" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -97,7 +97,7 @@
 
 </section>
 
-<section class="mbr-slider mbr-section mbr-section__container carousel slide" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider2-16" data-rv-view="620" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
+<section class="mbr-slider mbr-section mbr-section__container carousel slide" data-ride="carousel" data-keyboard="false" data-wrap="true" data-pause="false" data-interval="5000" id="slider2-16" data-rv-view="135" style="background-color: rgb(255, 255, 255); padding-top: 80px; padding-bottom: 80px;">
     <div class=" container article-slider">
         <div class=" row">
             <div class=" col-xs-12">
@@ -181,7 +181,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-e" data-rv-view="615" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-e" data-rv-view="130" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
