--- a/page35.html
+++ b/page35.html
@@ -24,9 +24,9 @@
   
 </head>
 <body>
-  <div id="menu-bq" custom-code="true" data-rv-view="1112"></div>
+  <div id="menu-bq" custom-code="true" data-rv-view="758"></div>
 
-<section class="mbr-section form1 mbr-after-navbar" id="form1-fe" data-rv-view="1115" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
+<section class="mbr-section form1 mbr-after-navbar" id="form1-fe" data-rv-view="761" style="background-color: rgb(255, 255, 255); padding-top: 120px; padding-bottom: 120px;">
     
     <div class="mbr-section mbr-section__container mbr-section__container--middle">
         <div class="container">
@@ -51,7 +51,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="0qGbqzyUHEKkFpTi7VeXawVgIoQYr1EkEsS3hRX4IiEW6QRRZ9fScrQjieXKDptOySJLywflpWOloUk1cOx/uU+os9c1Ng9ZVEFmOD4GxdJeAB1OC2SHlYmYC4yBBWU2" data-form-email="true">
+                        <input type="hidden" value="eqTJXXN/QhqRNUqbmAPlyzAB9ZjJMWKD6SjJ7QUQOVoMkbO8yR49me7v6TB2YBVREBVtNveSk30I3XVTzivFF+yj0+xj8rTEHKMEelgLWwweCsqqhFFt0d7rdj7NzX86" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -92,7 +92,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site builder</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="1113" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="759" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
