--- a/page40.html
+++ b/page40.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-e6" data-rv-view="1387">
+  <section id="menu-e6" data-rv-view="1033">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-ex" data-rv-view="1391" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-ex" data-rv-view="1037" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<div id="custom-html-ek" custom-code="true" data-rv-view="1394"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-ek" custom-code="true" data-rv-view="1040"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -392,7 +392,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-e7" data-rv-view="1389" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-e7" data-rv-view="1035" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
