--- a/page43.html
+++ b/page43.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-ey" data-rv-view="1425">
+  <section id="menu-ey" data-rv-view="1071">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-f0" data-rv-view="1429" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/y">free html site templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-f0" data-rv-view="1075" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<div id="custom-html-f1" custom-code="true" data-rv-view="1432"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-f1" custom-code="true" data-rv-view="1078"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -392,7 +392,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ez" data-rv-view="1427" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-ez" data-rv-view="1073" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
