--- a/page50.html
+++ b/page50.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-gk" data-rv-view="1588">
+  <section id="menu-gk" data-rv-view="1234">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-gm" data-rv-view="1592" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-gm" data-rv-view="1238" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<div id="custom-html-gn" custom-code="true" data-rv-view="1595"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-gn" custom-code="true" data-rv-view="1241"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -392,7 +392,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gl" data-rv-view="1590" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-gl" data-rv-view="1236" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
