--- a/page57.html
+++ b/page57.html
@@ -25,7 +25,7 @@
   
 </head>
 <body>
-  <section id="menu-i1" data-rv-view="1755">
+  <section id="menu-i1" data-rv-view="1401">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader16 mbr-after-navbar" id="extHeader16-i3" data-rv-view="1759" style="background-image: url(assets/images/mbr-840x1080.jpg);">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader16 mbr-after-navbar" id="extHeader16-i3" data-rv-view="1405" style="background-image: url(assets/images/mbr-840x1080.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(0, 0, 0);">
     </div>
@@ -84,7 +84,7 @@
                      
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-i4" data-rv-view="1766" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-i4" data-rv-view="1412" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -98,7 +98,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-i2" data-rv-view="1757" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-i2" data-rv-view="1403" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
