--- a/page45.html
+++ b/page45.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-fh" data-rv-view="1097">
+  <section id="menu-fh" data-rv-view="1093">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-fj" data-rv-view="1101" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-fj" data-rv-view="1097" style="background-color: rgb(23, 64, 52); padding-top: 80px; padding-bottom: 0px;">
 
     
     <div class="container">
@@ -87,7 +87,7 @@
 
 </section>
 
-<div id="custom-html-fk" custom-code="true" data-rv-view="1104"><script src="assets/web/assets/jquery/jquery.min.js"></script>
+<div id="custom-html-fk" custom-code="true" data-rv-view="1100"><script src="assets/web/assets/jquery/jquery.min.js"></script>
 <script>
     function check(id) {
         document.getElementById(id).checked = true;
@@ -392,7 +392,7 @@
     </div>
 </div></div>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fi" data-rv-view="1099" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fi" data-rv-view="1095" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
