--- a/page70.html
+++ b/page70.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-mp" data-rv-view="1971">
+  <section id="menu-mp" data-rv-view="10">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-mr" data-rv-view="1975" style="background-image: url(assets/images/mbr-2-1920x1080.jpg);">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-mr" data-rv-view="14" style="background-image: url(assets/images/mbr-2-1920x1080.jpg);">
 
     
 
@@ -75,11 +75,23 @@
         </div>
     </div>
 
-    <div class="mbr-arrow mbr-arrow-floating" aria-hidden="true"><a href="#soundcloud1-ms"><i class="mbr-arrow-icon"></i></a></div>
+    <div class="mbr-arrow mbr-arrow-floating" aria-hidden="true"><a href="#soundcloud1-o1"><i class="mbr-arrow-icon"></i></a></div>
 
 </section>
 
-<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-ms" data-rv-view="1978" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-o1" data-rv-view="19" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
+    <!-- Gallery -->
+    <div class="mbr-section__container mbr-gallery-layout-article">
+            <div>
+                <figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom">
+                    <iframe class="mbr-embedded-video" frameborder="0" allowfullscreen="" src="https://w.soundcloud.com/player/?url=http%3A%2F%2Fapi.soundcloud.com%2Ftracks%2F538022763&amp;amp;auto_play=false&amp;amp;hide_related=false&amp;amp;show_comments=true&amp;amp;show_user=true&amp;amp;show_reposts=false&amp;amp;visual=true"></iframe>
+                </figure>
+            </div>
+        <div class="clearfix"></div>
+    </div>
+</section>
+
+<section class="mbr-gallery mbr-section mbr-section--no-padding mbr-soundcloud-container" id="soundcloud1-ms" data-rv-view="17" style="background-color: rgb(255, 255, 255); padding-top: 0rem; padding-bottom: 0rem;">
     <!-- Gallery -->
     <div class="mbr-section__container mbr-gallery-layout-article">
             <div>
@@ -91,7 +103,7 @@
     </div>
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-mq" data-rv-view="1973" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-mq" data-rv-view="12" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
@@ -102,10 +114,10 @@
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
   <script src="assets/jarallax/jarallax.js"></script>
   <script src="assets/viewport-checker/jquery.viewportchecker.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
-  <script src="assets/touch-swipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/smooth-scroll/smooth-scroll.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
