--- a/page14.html
+++ b/page14.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-2j" data-rv-view="273">
+  <section id="menu-2j" data-rv-view="218">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-2l" data-rv-view="277" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.info/f">easy web creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-2l" data-rv-view="222" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2m" data-rv-view="280" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-2m" data-rv-view="225" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -83,7 +83,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-2n" data-rv-view="282" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-2n" data-rv-view="227" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -100,7 +100,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2o" data-rv-view="284" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-2o" data-rv-view="229" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -114,7 +114,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-2p" data-rv-view="286" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-2p" data-rv-view="231" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -125,7 +125,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2q" data-rv-view="288" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
+<section class="mbr-section article mbr-section__container" id="content1-2q" data-rv-view="233" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
@@ -140,7 +140,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-2s" data-rv-view="290" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
+<section class="mbr-section mbr-section__container" id="image2-2s" data-rv-view="235" style="background-color: rgb(255, 255, 255); padding-top: 40px; padding-bottom: 40px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -157,7 +157,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2r" data-rv-view="292" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-2r" data-rv-view="237" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -169,7 +169,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2k" data-rv-view="275" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2k" data-rv-view="220" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
