--- a/page30.html
+++ b/page30.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-99" data-rv-view="650">
+  <section id="menu-99" data-rv-view="595">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-9b" data-rv-view="654" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-9b" data-rv-view="599" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9c" data-rv-view="657" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9c" data-rv-view="602" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -82,7 +82,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-9d" data-rv-view="659" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-9d" data-rv-view="604" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -99,7 +99,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9e" data-rv-view="661" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9e" data-rv-view="606" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -112,7 +112,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<section class="mbr-section mbr-section__container article" id="header3-9f" data-rv-view="663" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section mbr-section__container article" id="header3-9f" data-rv-view="608" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -123,7 +123,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9g" data-rv-view="665" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9g" data-rv-view="610" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -133,7 +133,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-9h" data-rv-view="667" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-9h" data-rv-view="612" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -150,7 +150,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9i" data-rv-view="669" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9i" data-rv-view="614" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -160,7 +160,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-9j" data-rv-view="671" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-9j" data-rv-view="616" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -177,7 +177,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-9k" data-rv-view="673" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-9k" data-rv-view="618" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -187,7 +187,7 @@ Her legs are long, relative to her small body type, and tanned from years of reg
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-9a" data-rv-view="652" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-9a" data-rv-view="597" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
