--- a/page55.html
+++ b/page55.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-  <section id="menu-hb" data-rv-view="1279">
+  <section id="menu-hb" data-rv-view="1224">
 
     <nav class="navbar navbar-dropdown navbar-fixed-top">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own site for free</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-hd" data-rv-view="1283" style="background-image: url(assets/images/mbr-1-1618x1080.jpg); padding-top: 240px; padding-bottom: 240px;">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="mbr-section mbr-parallax-background mbr-after-navbar" id="msg-box7-hd" data-rv-view="1228" style="background-image: url(assets/images/mbr-1-1618x1080.jpg); padding-top: 240px; padding-bottom: 240px;">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -92,7 +92,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-he" data-rv-view="1286" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-he" data-rv-view="1231" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -128,7 +128,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-hc" data-rv-view="1281" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-hc" data-rv-view="1226" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
