--- a/About.html
+++ b/About.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons4-19" data-rv-view="199" style="background-color: rgb(23, 64, 52); padding-top: 90px; padding-bottom: 90px;">
+<section class="engine"><a href="https://mobirise.info/b">create a site for free</a></section><section class="mbr-section mbr-section-md-padding mbr-after-navbar" id="social-buttons4-19" data-rv-view="199" style="background-color: rgb(23, 64, 52); padding-top: 90px; padding-bottom: 90px;">
     
     <div class="container">
         <div class="row">
@@ -88,7 +88,7 @@
                   <h3 class="mbr-section-title display-2">Aimee Dastin-van Rijn</h3>
                   <div class="lead">
 
-                    <p>Aimee is the founder and website designer of The Lion's Tale. She is also a writer for the paper, the quiz maker, as well as the Editor in Chief.&nbsp;<br><br>Articles Written:<br>- The 2017-2018 Guide to St. John's<br>- My Icelandic Boyfriend<br>- High School New Student Orientation<br>- Bye Bye Birdie<br>- Green and White Day<br>- The True Story of Conrad Birdie<br>- Winter Art Vernissage<br>- A-Z Guide to St. John's for the Holidays<br>- Obverse Art Show<br>- THIMUN<br>- Interview With the New Head of School<br>- St. John's Fashion Shoot<br>- IB Seniors' Final Art Show<br>- The 2018-2019 Guide to St, John's<br>- Interview with the New US Ambassador</p>
+                    <p>Aimee is the founder and website designer of The Lion's Tale. She is also a writer for the paper, the quiz maker, as well as the Editor in Chief.&nbsp;<br><br>Articles Written:<br>- The 2017-2018 Guide to St. John's<br>- My Icelandic Boyfriend<br>- High School New Student Orientation<br>- Bye Bye Birdie<br>- Green and White Day<br>- The True Story of Conrad Birdie<br>- Winter Art Vernissage<br>- A-Z Guide to St. John's for the Holidays<br>- Obverse Art Show<br>- THIMUN<br>- Interview With the New Head of School<br>- St. John's Fashion Shoot<br>- IB Seniors' Final Art Show<br>- The 2018-2019 Guide to St, John's<br>- Interview with the New US Ambassador<br>- MHS Winter Art Show</p>
 
                   </div>
 
@@ -117,7 +117,7 @@
                   <h3 class="mbr-section-title display-2">Ilinca Maria-Manda</h3>
                   <div class="lead">
 
-                    <p>Ilinca is a writer for the paper and head of the Opinion Section for The Lion's Tale.<br><br>Articles Written:<br>- St. John's for a Newcomer<br>- Reading Suggestions for the Cold Season<br>- And What About the Future?<br>- Reading Suggestions for the Summer Season<br>- University Choice - A Leap of Faith<br>- "London Calling... Yes, I Was There, Too."</p>
+                    <p>Ilinca is a writer for the paper and head of the Opinion Section for The Lion's Tale.<br><br>Articles Written:<br>- St. John's for a Newcomer<br>- Reading Suggestions for the Cold Season<br>- And What About the Future?<br>- Reading Suggestions for the Summer Season<br>- University Choice - A Leap of Faith<br>- "London Calling... Yes, I Was There, Too."<br>- Workplace Romance</p>
 
                   </div>
 
@@ -156,7 +156,7 @@
                   <h3 class="mbr-section-title display-2">Isaiah Lowney</h3>
                   <div class="lead">
 
-                    <p>Isaiah is a writer for the Lion's Tale.<br><br>Articles Written:<br>- Kayla Smith: A Teen Runner’s Life<br>- Informal Tips for the Beginner/Intermediate Guitarist<br>- Fiscal Policy "For Dummies"<br>- Working Out and the Theory of Active Rest "For Dummies" </p>
+                    <p>Isaiah is a writer for the Lion's Tale.<br><br>Articles Written:<br>- Kayla Smith: A Teen Runner’s Life<br>- Informal Tips for the Beginner/Intermediate Guitarist<br>- Fiscal Policy "For Dummies"<br>- Working Out and the Theory of Active Rest "For Dummies"<br>- The History and Nature of Central Banking </p>
 
                   </div>
 
@@ -253,7 +253,7 @@
                   <h3 class="mbr-section-title display-2">Andreea Samareanu</h3>
                   <div class="lead">
 
-                    <p>Andreea is a creator for the paper, as well as the head of the Arts Section.<br><br>Articles Written:<br>- Daydream Nation: A Photo Series</p>
+                    <p>Andreea is a creator for the paper, as well as the head of the Arts Section.<br><br>Articles Written:<br>- Daydream Nation: A Photo Series<br>- International Romances<br>- Workplace Romance</p>
 
                   </div>
 
