--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.info/g">build a site</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="10" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -149,7 +149,7 @@
                     <div class="card-block">
                         <h4 class="card-title">The Nature and History of Central Banking</h4>
                         <h5 class="card-subtitle">Written By: Isaiah Lowney</h5>
-                        <p class="card-text">A (not so) breif history of Central Banking.</p>
+                        <p class="card-text">A (not so) brief history of Central Banking.</p>
                         <div class="card-btn"><a href="page80.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
