--- a/page35.html
+++ b/page35.html
@@ -51,7 +51,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="XRaYfgiK1ggecMfkCv9PzP33Um9BcyRokLUaJqmPYaijKobi/7M1cbqfSieNwQOuslE7/S7tbhzX8cCk+x5xyISqbdb6lB1bGe4NGoM2pXRNg2sld17wmuqfpFclC4YO" data-form-email="true">
+                        <input type="hidden" value="6B+aWfgCJIxKgOfjrcqkWQgVbHsvyyqPQb7Y9QOeHhyGpxEVUgBfmm4dEYGmB3nDGCyfJT9VthBRtz6W3QnUaxhPfGDKE6yO/OaYUL4vRA40sWnv32I0hOUsZw7j3ZB8" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -92,7 +92,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="755" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-br" data-rv-view="755" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
