--- a/page46.html
+++ b/page46.html
@@ -51,7 +51,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CENTSADAY">
 
-                        <input type="hidden" value="tBqR/S2D4Wvr68q1X2Ok0lT129SDAakHe0G0EylrTgSuvRKmyXxXwQnNx0FmWPvDTni7JBjiOns3n7DqqKysmOa731nlt3ZE2u0Pa/FK18xF/DeBJKKGpsMrIW34Vs3w" data-form-email="true">
+                        <input type="hidden" value="Mqw5LnEuDyV9SzNcEN89rjTYBsC20az18x7NB06KzApHFrs0CWkSxZfI8YO7RtSy72jvRBpCsRToDNnNBCBNq2yWMRRdltQd01anb69FsaMOPhsbF2RJdApNDaXCCMvg" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -92,7 +92,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fn" data-rv-view="1102" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<section class="engine"><a href="https://mobirise.info/h">how to create a web page</a></section><footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-fn" data-rv-view="1102" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
