--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="275" style="background-color: rgb(23, 64, 52);">
+<section class="engine"><a href="https://mobirise.info/c">web builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-gu" data-rv-view="275" style="background-color: rgb(23, 64, 52);">
 
     
 
@@ -106,12 +106,12 @@
         <div class="mbr-cards-col col-xs-12 col-lg-3" style="padding-top: 80px; padding-bottom: 80px;">
             <div class="container">
                 <div class="card cart-block">
-                    <div class="card-img"><img src="assets/images/mbr-6-600x400.jpg" class="card-img-top"></div>
+                    <div class="card-img"><img src="assets/images/mbr-1-600x424.jpg" class="card-img-top"></div>
                     <div class="card-block">
-                        <h4 class="card-title">Working Out and the Theory of Active Rest "For Dummies"</h4>
-                        <h5 class="card-subtitle">Written By: Isaiah Lowney</h5>
-                        <p class="card-text">A Quick Guide to Working Out</p>
-                        <div class="card-btn"><a href="page71.html" class="btn btn-danger">MORE</a></div>
+                        <h4 class="card-title">The Rise for Climate Student March</h4>
+                        <h5 class="card-subtitle">Written By: Lovisa Pervan</h5>
+                        <p class="card-text">An article written by an attendee of one of the marches who is a St. John's student.</p>
+                        <div class="card-btn"><a href="page83.html" class="btn btn-danger">MORE</a></div>
                     </div>
                 </div>
             </div>
